hot fix for other previous mess up. drawing disabled on mobile...

--- a/src/pages/Notebooks/components/notebookOpenUI/NotebookPage.module.css
+++ b/src/pages/Notebooks/components/notebookOpenUI/NotebookPage.module.css
@@ -71,7 +71,7 @@
     .button:nth-child(3) {
         top: 8%;
         right: 3%;
-        transform: rotate(180);
+        transform: rotate(180deg);
     }
 
     .button:nth-child(1) {
